Fixed bug #38661 (mixed-case URL breaks url-wrappers).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@219328 c90b9560-bf6c-de11-be94-00142212c4b1